implemented based on jdk 8