@@ -1,5 +1,6 @@
 import java.io.*;
 import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.nio.file.Path;
 import java.util.StringTokenizer;
 import ifs.fnd.base.IfsException;
@@ -10,8 +11,9 @@ public class testTransformer
     {
 		// input file
 		try {
-		Path fileName = Path.of("..//testFiles//accounts.csv");         
-        String s = Files.readString(fileName);
+		Path fileName = Paths.get("..\\testFiles\\accounts.csv");         
+        byte[] contentB = Files.readAllBytes(fileName);
+		String s = new String(contentB);
 	    csvToXmlApp10 tc = new csvToXmlApp10();
 		
 		System.out.println(tc.transform(s));
